[gd_scene load_steps=11 format=2]

[ext_resource path="res://dudes/Flyer/Flyer.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/units/Bomber/Bomber.png" type="Texture" id=2]
[ext_resource path="res://dudes/Bomber/Bomber.gd" type="Script" id=3]
[ext_resource path="res://assets/units/Bomber/blue/Fly_0002.png" type="Texture" id=4]
[ext_resource path="res://assets/units/Bomber/blue/Fly_0001.png" type="Texture" id=5]
[ext_resource path="res://assets/units/Bomber/red/Fly_0002.png" type="Texture" id=6]
[ext_resource path="res://assets/units/Bomber/red/Fly_0001.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 17.206
height = 0.0

[node name="Bomber" instance=ExtResource( 1 )]
script = ExtResource( 3 )
castle_damage = 2
max_health = 8
regular_sprites = SubResource( 1 )
enemy_sprites = SubResource( 2 )

[node name="AnimatedSprite" parent="." index="2"]
frame = 2

[node name="Position2D" type="Position2D" parent="AnimatedSprite" index="3"]
position = Vector2( 0, -8.7704 )

[node name="Position2D2" type="Position2D" parent="AnimatedSprite" index="4"]
position = Vector2( 0.561859, 18.1991 )

[node name="Sprite" parent="." index="3"]
texture = ExtResource( 2 )

[node name="BombArea" type="Area2D" parent="." index="6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BombArea" index="0"]
position = Vector2( -2.86042, 21.3165 )
rotation = 0.868754
shape = SubResource( 3 )

[node name="BombCooldown" type="Timer" parent="." index="7"]
one_shot = true

[connection signal="area_entered" from="BombArea" to="." method="_on_BombArea_area_entered"]
